Ej4/Build/output.log
[ 42%] Building CXX object CMakeFiles/Ejercicio4.dir/Ej4.cc.o
[ 42%] Building CXX object CMakeFiles/Ejercicio4.dir/src/ActionInitialization.cc.o
[ 42%] Building CXX object CMakeFiles/Ejercicio4.dir/src/SteppingAction.cc.o
In file included from /lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/include/SteppingAction.hh:7,
                 from /lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/src/SteppingAction.cc:1:
/lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/include/RunAction.hh: In member function 'virtual void RunAction::BeginOfRunAction(const G4Run*)':
/lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/include/RunAction.hh:20:5: error: 'fSecondaries' was not declared in this scope
   20 |     fSecondaries.clear();
      |     ^~~~~~~~~~~~
In file included from /lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/include/ActionInitialization.hh:6,
                 from /lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/src/ActionInitialization.cc:1:
/lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/include/RunAction.hh: In member function 'virtual void RunAction::BeginOfRunAction(const G4Run*)':
/lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/include/RunAction.hh:20:5: error: 'fSecondaries' was not declared in this scope
   20 |     fSecondaries.clear();
      |     ^~~~~~~~~~~~
/lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/include/RunAction.hh: In member function 'virtual void RunAction::EndOfRunAction(const G4Run*)':
/lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/include/RunAction.hh:29:22: error: 'fSecondaries' was not declared in this scope
   29 |     for (auto& sec : fSecondaries) {
      |                      ^~~~~~~~~~~~
/lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/include/RunAction.hh: In member function 'virtual void RunAction::EndOfRunAction(const G4Run*)':
/lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/include/RunAction.hh:29:22: error: 'fSecondaries' was not declared in this scope
   29 |     for (auto& sec : fSecondaries) {
      |                      ^~~~~~~~~~~~
/lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/include/RunAction.hh: In member function 'void RunAction::RecordSecondary(const G4String&, G4double, const G4ThreeVector&, const G4ThreeVector&, const G4String&)':
/lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/include/RunAction.hh:53:9: error: 'fSecondaries' was not declared in this scope
   53 |         fSecondaries.push_back({name, ekin, pos, mom, proc});
      |         ^~~~~~~~~~~~
/lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/include/RunAction.hh: At global scope:
/lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/include/RunAction.hh:58:1: error: expected unqualified-id before 'private'
   58 | private:
      | ^~~~~~~
/lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/include/RunAction.hh: In member function 'void RunAction::RecordSecondary(const G4String&, G4double, const G4ThreeVector&, const G4ThreeVector&, const G4String&)':
/lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/include/RunAction.hh:53:9: error: 'fSecondaries' was not declared in this scope
   53 |         fSecondaries.push_back({name, ekin, pos, mom, proc});
      |         ^~~~~~~~~~~~
/lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/include/RunAction.hh: At global scope:
/lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/include/RunAction.hh:58:1: error: expected unqualified-id before 'private'
   58 | private:
      | ^~~~~~~
/lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/src/ActionInitialization.cc:7:6: error: redefinition of 'void ActionInitialization::Build() const'
    7 | void ActionInitialization::Build() const
      |      ^~~~~~~~~~~~~~~~~~~~
/lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/include/ActionInitialization.hh:13:8: note: 'virtual void ActionInitialization::Build() const' previously defined here
   13 |   void Build() const {
      |        ^~~~~
In file included from /lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/include/ActionInitialization.hh:6,
                 from /lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/Ej4.cc:4:
/lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/include/RunAction.hh: In member function 'virtual void RunAction::BeginOfRunAction(const G4Run*)':
/lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/include/RunAction.hh:20:5: error: 'fSecondaries' was not declared in this scope
   20 |     fSecondaries.clear();
      |     ^~~~~~~~~~~~
/lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/include/RunAction.hh: In member function 'virtual void RunAction::EndOfRunAction(const G4Run*)':
/lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/include/RunAction.hh:29:22: error: 'fSecondaries' was not declared in this scope
   29 |     for (auto& sec : fSecondaries) {
      |                      ^~~~~~~~~~~~
/lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/include/RunAction.hh: In member function 'void RunAction::RecordSecondary(const G4String&, G4double, const G4ThreeVector&, const G4ThreeVector&, const G4String&)':
/lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/include/RunAction.hh:53:9: error: 'fSecondaries' was not declared in this scope
   53 |         fSecondaries.push_back({name, ekin, pos, mom, proc});
      |         ^~~~~~~~~~~~
/lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/include/RunAction.hh: At global scope:
/lustre/home/agonzalez/SimGeant4/ejercicios/Ej4/Ejercicio4/include/RunAction.hh:58:1: error: expected unqualified-id before 'private'
   58 | private:
      | ^~~~~~~
make[2]: *** [CMakeFiles/Ejercicio4.dir/build.make:149: CMakeFiles/Ejercicio4.dir/src/SteppingAction.cc.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[2]: *** [CMakeFiles/Ejercicio4.dir/build.make:93: CMakeFiles/Ejercicio4.dir/src/ActionInitialization.cc.o] Error 1
make[2]: *** [CMakeFiles/Ejercicio4.dir/build.make:79: CMakeFiles/Ejercicio4.dir/Ej4.cc.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/Ejercicio4.dir/all] Error 2
make: *** [Makefile:91: all] Error 2
